# JNI-demo

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/bfr/buddy/jni_demo/: ExampleInstrumentedTest.java  JNITestsTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: androidlog.hpp  dummydata.hpp  dummyobject.hpp  enumsindexes.cpp  enumsindexes.hpp  exampleofenum.hpp  jni-functions.cpp  jobjectsconversions.cpp  jobjectsconversions.hpp  util.hpp
app/src/main/java/com/bfr/buddy/jni_demo/: FirstFragment.java  MainActivity.java  SecondFragment.java
app/src/main/java/com/bfr/buddy/jnidemo/: DisposableWithId.java  DummyData.java  DummyObject.java  ExampleOfEnum.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bfr/buddy/jni_demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
